# TFLite_on_RPi_Pico

./: README.md
Cat_Dog_TFL2uC_float32/: CMakeLists.txt
Cat_Dog_TFL2uC_float32/Cat_Dog_Arducam_float32/: CMakeLists.txt  Cat_Dog_model.cc  Main.cc  TF_Lite_exe.cc  TF_Lite_exe.h  image_provider.cc  image_provider.h  input_data.h  model_settings.h
Cat_Dog_TFL2uC_int8/: CMakeLists.txt  README.md
Cat_Dog_TFL2uC_int8/Cat_Dog_Arducam_int8/: CMakeLists.txt  Cat_Dog_model.cc  Cat_Dog_model.h  Main.cc  TF_Lite_exe.cc  TF_Lite_exe.h  image_provider.cc  image_provider.h
EMNIST_TFL2uC_float32/: CMakeLists.txt
EMNIST_TFL2uC_float32/EMNIST_float32/: CMakeLists.txt  EMNIST_model.h  Main.cpp  Main_button.cpp  TF_Lite_exe.cc  TF_Lite_exe.h  input_data_float32.h  input_data_uint8.h
EMNIST_TFL2uC_int8/: CMakeLists.txt  README.md
EMNIST_TFL2uC_int8/EMNIST_int8/: CMakeLists.txt  EMNIST_model.cpp  Main.cpp  TF_Lite_exe.cc  TF_Lite_exe.h  input_data_int8.h
